@@ -1030,6 +1030,11 @@
       "description": "ModelAnimation",
       "fields": [
         {
+          "type": "char[32]",
+          "name": "name",
+          "description": "Animation name"
+        },
+        {
           "type": "int",
           "name": "boneCount",
           "description": "Number of bones"
@@ -1048,11 +1053,6 @@
           "type": "Transform **",
           "name": "framePoses",
           "description": "Poses array by frame"
-        },
-        {
-          "type": "char[32]",
-          "name": "name",
-          "description": "Animation name"
         }
       ]
     },
@@ -1324,11 +1324,6 @@
       "name": "FilePathList",
       "description": "File path list",
       "fields": [
-        {
-          "type": "unsigned int",
-          "name": "capacity",
-          "description": "Filepaths max entries"
-        },
         {
           "type": "unsigned int",
           "name": "count",
@@ -4731,6 +4726,36 @@
         {
           "type": "FilePathList",
           "name": "files"
+        }
+      ]
+    },
+    {
+      "name": "GetDirectoryFileCount",
+      "description": "Get the file count in a directory",
+      "returnType": "unsigned int",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "dirPath"
+        }
+      ]
+    },
+    {
+      "name": "GetDirectoryFileCountEx",
+      "description": "Get the file count in a directory with extension filtering and recursive directory scan. Use 'DIR' in the filter string to include directories in the result",
+      "returnType": "unsigned int",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "basePath"
+        },
+        {
+          "type": "const char *",
+          "name": "filter"
+        },
+        {
+          "type": "bool",
+          "name": "scanSubdirs"
         }
       ]
     },
@@ -11408,6 +11433,48 @@
         {
           "type": "int",
           "name": "frame"
+        }
+      ]
+    },
+    {
+      "name": "UpdateModelAnimationBonesLerp",
+      "description": "Update model animation mesh bone matrices with interpolation between two poses(GPU skinning)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Model",
+          "name": "model"
+        },
+        {
+          "type": "ModelAnimation",
+          "name": "animA"
+        },
+        {
+          "type": "int",
+          "name": "frameA"
+        },
+        {
+          "type": "ModelAnimation",
+          "name": "animB"
+        },
+        {
+          "type": "int",
+          "name": "frameB"
+        },
+        {
+          "type": "float",
+          "name": "value"
+        }
+      ]
+    },
+    {
+      "name": "UpdateModelVertsToCurrentBones",
+      "description": "Update model vertices according to mesh bone matrices (CPU)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Model",
+          "name": "model"
         }
       ]
     },
