@@ -45,7 +45,7 @@
     {
       "name": "CAMERA_PAN_SPEED",
       "type": "FLOAT",
-      "value": 0.2,
+      "value": 2.0,
       "description": ""
     },
     {
